<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B6AA"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:backgroundTint="#00FFFFFF"
        android:text="Back"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="EVENTEASE"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <View
        android:id="@+id/divider"
        android:layout_width="411dp"
        android:layout_height="634dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="191dp"
        android:layout_height="150dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/upload_image_button"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:backgroundTint="#B4CCCCCC"
        android:ems="10"
        android:inputType="text"
        android:text="Enter the name of the event:"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:backgroundTint="#B4CCCCCC"
        android:ems="10"
        android:inputType="text"
        android:text="Edit descripton:"
        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:backgroundTint="#B4CCCCCC"
        android:ems="10"
        android:inputType="text"
        android:text="Enter the location:"
        app:layout_constraintBottom_toTopOf="@+id/enable_location_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <CheckBox
        android:id="@+id/enable_location_checkbox"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:backgroundTint="#B4CCCCCC"
        android:text="Enable Geolocation Tracking"
        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:backgroundTint="#B4CCCCCC"
        android:ems="10"
        android:inputType="text"
        android:text="Duration:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00B6AA"
        android:text="Generate Event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload an image for the event using the icon below"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider"
        app:layout_constraintVertical_bias="0.091" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="#A4A9A9A9"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/attendee_icon"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/calendar_icon"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.533" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/menu_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/duration_icon"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText4"
        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toTopOf="@+id/editTextText4"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
