...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/orgIcon"
                android:paddingTop="@dimen/cardview_default_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/organizericon"
                android:background="@color/white"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/black"
            android:text="Confirm"/>
    </LinearLayout>
...
